<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.ImpRegisterView"
    android:background="@color/backgroundWhite">

    <TextView
        android:id="@+id/logoRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="i am at"
        android:textAllCaps="false"
        android:textColor="@color/backgroundBlue"
        android:textSize="45dp"
        app:fontFamily="@font/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        />

    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_bg_border"
        android:ems="12"
        android:fontFamily="@font/opensas"
        android:hint="@string/edittextusername"
        android:inputType="textPersonName"
        android:paddingLeft="17dp"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoRegister"
        app:layout_constraintVertical_bias="0.0"
        tools:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="12dp"

        />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_bg_border"
        android:ems="12"
        android:fontFamily="@font/opensas"
        android:hint="@string/edittextpassword"
        android:inputType="textPassword"
        android:paddingLeft="17dp"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerUsername"
        app:layout_constraintVertical_bias="0.0"
        tools:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="12dp"

        />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edittext_bg_border"
        android:ems="12"
        android:fontFamily="@font/opensas"
        android:hint="@string/edittextemail"
        android:inputType="textEmailAddress"
        android:paddingLeft="17dp"
        android:textColorHint="@color/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword"
        app:layout_constraintVertical_bias="0.0"
        tools:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="12dp"
        />

    <Button
        android:id="@+id/registerSignUp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:background="@color/backgroundWhite"
        android:text="@string/registertext"
        android:textAllCaps="false"
        android:textColor="@color/hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail"
        app:layout_constraintVertical_bias="0.0"
        tools:fontFamily="@font/ubuntu" />
</android.support.constraint.ConstraintLayout>